--- a/deployment/roles/mariadb/tasks/main.yml
+++ b/deployment/roles/mariadb/tasks/main.yml
@@ -14,3 +14,6 @@
 
 - name: install mysqldb for ansible
   action: apt pkg=python-mysqldb state=installed
+
+- name: install mysql dev files
+  action: apt pkg=libmariadbclient-dev state=installed
