--- a/images/debian7basehosting/Dockerfile
+++ b/images/debian7basehosting/Dockerfile
@@ -1,4 +1,3 @@
-FROM debian:wheezy
+FROM manager/debian7base
 
-RUN apt-get update && apt-get install -y ssmtp
 ADD ssmtp.conf /etc/ssmtp/ssmtp.conf
