--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 Django==1.7
-docker-py
-MySQL-Python
+MySQL-python==1.2.5
+argparse==1.2.1
+distribute==0.6.24
+django-bootstrap-form==3.1
+docker-py==0.7.0
+requests==2.5.1
+six==1.9.0
+websocket-client==0.23.0
+wsgiref==0.1.2
