new ssmtp.conf:

--- a/images/debian7basehosting/ssmtp.conf
+++ b/images/debian7basehosting/ssmtp.conf
@@ -7,15 +7,15 @@ root=postmaster
 
 # The place where the mail goes. The actual machine name is required no
 # MX records are consulted. Commonly mailhosts are named mail.domain.com
-mailhub=mail
+mailhub=172.17.42.1
 
 # Where will the mail seem to come from?
 #rewriteDomain=
 
 # The full hostname
-hostname=172.17.42.1
+hostname=hosting
 
 # Are users allowed to set their own From: address?
 # YES - Allow the user to specify their own From: address
 # NO - Use the system generated From: address
-#FromLineOverride=YES
+FromLineOverride=YES
