nginx apache log

--- a/manager/templates/system/apache_vhost.conf
+++ b/manager/templates/system/apache_vhost.conf
@@ -2,4 +2,7 @@
         ServerName {{domain}}
 
         {{config|safe}}
+
+        ErrorLog /var/log/apache2/{{domain}}-error.log
+        CustomLog /var/log/apache2/{{domain}}-access.log combined
 </VirtualHost>
