--- a/manager/templates/system/nginx_vhost.conf
+++ b/manager/templates/system/nginx_vhost.conf
@@ -3,4 +3,7 @@ server {
         server_name {{domain}};
 
         {{config|safe}}
+
+        error_log /var/log/nginx/{{domain}}-error.log warn;
+        access_log /var/log/nginx/{{domain}}-access.log combined;
 }
