--- a/images/php56-base-hosting/php.ini
+++ b/images/php56-base-hosting/php.ini
@@ -675,7 +675,7 @@ post_max_size = 8000M
 
 ; Automatically add files before PHP document.
 ; http://php.net/auto-prepend-file
-;auto_prepend_file = /apps/xhprof.io/inc/prepend.php
+auto_prepend_file = /mystuff/prepend.php
 ;;/apps/xhgui/external/header.php
 
 ; Automatically add files after PHP document.
@@ -1931,5 +1931,3 @@ opcache.fast_shutdown=1
 ; uprofiler runs.
 ;
 ;uprofiler.output_dir=/var/uprofiler
-
-;auto_prepend_file "/apps/xhgui/external/header.php"
