--- a/images/php56-legacy-hosting/php.ini
+++ b/images/php56-legacy-hosting/php.ini
@@ -1932,4 +1932,4 @@ opcache.fast_shutdown=1
 ;
 ;uprofiler.output_dir=/var/uprofiler
 
-;auto_prepend_file "/apps/xhgui/external/header.php"
+auto_prepend_file = /mystuff/prepend.php
