--- a/images/php56-legacy-hosting/Dockerfile
+++ b/images/php56-legacy-hosting/Dockerfile
@@ -2,7 +2,7 @@ FROM manager/php56-base-hosting
 
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 
-RUN mkdir /mystuff && chown #user#:#user# /mystuff
+RUN chown -R #user#:#user# /mystuff
 
 RUN sed -i s/ENV_USER/#user#/ /etc/php5/fpm/php-fpm.conf && sed -i s/ENV_USER/#user#/ /etc/php5/fpm/pool.d/www.conf
 
