--- a/images/python27-base-hosting/Dockerfile
+++ b/images/python27-base-hosting/Dockerfile
@@ -1,3 +1,3 @@
 FROM manager/debian7basehosting
 
-RUN apt-get install -y python python-virtualenv python-dev
+RUN apt-get install -y python python-virtualenv python-dev libmysqlclient-dev
