--- a/images/python34-base-hosting/Dockerfile
+++ b/images/python34-base-hosting/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir -p /usr/local/opt && mkdir -p /usr/local/src && wget -O /usr/local/src
     && cd /usr/local/src && tar xvfz python342.tgz && cd /usr/local/src/Python-3.4.2 && ./configure --prefix=/usr/local/opt/python-3.4 \
     && make && make install
 
-RUN apt-get install -y libffi-dev
+RUN apt-get install -y libffi-dev libmysqlclient-dev
