--- a/manager/templates/system/nginx_vhost.conf
+++ b/manager/templates/system/nginx_vhost.conf
@@ -1,5 +1,9 @@
 server {
+        {% if ssl_enabled %}
+        listen      443 spdy;
+        {% else %}
         listen 80;
+        {% endif %}
         server_name {{domain}};
 
         {{config|safe}}
