--- a/images/php56-hosting/Dockerfile
+++ b/images/php56-hosting/Dockerfile
@@ -9,6 +9,11 @@ RUN sed -i s/ENV_USER/#user#/ /etc/php5/fpm/php-fpm.conf && sed -i s/ENV_USER/#u
 ADD www.conf /etc/php5/fpm/pool.d/www.conf
 ADD php.ini /etc/php5/fpm/php.ini
 
+ADD start.sh /mystuff/start.sh
+
+RUN chown -R #user#:#user# /mystuff && chmod +x /mystuff/start.sh
+
+
 USER #user#
 EXPOSE 9000
-CMD php5-fpm
+CMD /bin/bash -c "/mystuff/start.sh"
