java8 env variables

--- a/images/java8-shell/Dockerfile
+++ b/images/java8-shell/Dockerfile
@@ -4,4 +4,5 @@ RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home
 
 USER #user#
 
-RUN export PATH=$PATH:/usr/local/apache-maven/apache-maven-3.2.5/bin
+ENV PATH $PATH:/usr/local/apache-maven/apache-maven-3.2.5/bin
+ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
