move php56 shell/hosting shared commands to php56-base

--- a/images/php56-base-hosting/Dockerfile
+++ b/images/php56-base-hosting/Dockerfile
@@ -1,16 +1,4 @@
-FROM manager/debian7basehosting
-
-RUN echo "deb http://packages.dotdeb.org wheezy-php56 all" >> /etc/apt/sources.list.d/dotdeb.list && \
-	echo "deb-src http://packages.dotdeb.org wheezy-php56 all" >> /etc/apt/sources.list.d/dotdeb.list && \
-	apt-get update && apt-get install -y wget && \
-	wget http://www.dotdeb.org/dotdeb.gpg -O- |apt-key add - && apt-get update && apt-get install -y php5-cli php5-fpm \
-	php5-curl php5-gd php5-intl php-pear php5-imagick php5-imap php5-mcrypt php5-memcache php5-pspell php5-recode php5-sqlite php5-tidy php5-xmlrpc php5-xsl \
-	php5-dev
-
-RUN apt-get install -y php5-gd php5-mysql
-
-#RUN pear clear-cache && pear update-channels
-RUN pecl install xhprof-beta
+FROM manager/php56-base
 
 ADD php-fpm.conf /etc/php5/fpm/php-fpm.conf
 ADD www.conf /etc/php5/fpm/pool.d/www.conf
