java8, python27, python34 create base images

--- a/images/java8-hosting/Dockerfile
+++ b/images/java8-hosting/Dockerfile
@@ -1,4 +1,4 @@
-FROM manager/java8-base-hosting
+FROM manager/java8-base
 
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 
