--- a/images/python27-base/Dockerfile
+++ b/images/python27-base/Dockerfile
@@ -1,3 +1,3 @@
-FROM manager/debian7basehosting
+FROM manager/debian7base
 
 RUN apt-get install -y python python-virtualenv python-dev libmysqlclient-dev
