--- a/images/python34-hosting/Dockerfile
+++ b/images/python34-hosting/Dockerfile
@@ -1,4 +1,4 @@
-FROM manager/python34-base-hosting
+FROM manager/python34-base
 
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 
