--- a/images/nodejs0.12-base/Dockerfile
+++ b/images/nodejs0.12-base/Dockerfile
@@ -4,5 +4,5 @@ RUN apt-get install curl && \
 	curl -sL https://deb.nodesource.com/setup | bash - && \
 	apt-get install -y nodejs
 
-RUN npm install bower grunt-cli
+RUN npm install -g bower grunt-cli
 
