--- a/images/php56-base/Dockerfile
+++ b/images/php56-base/Dockerfile
@@ -23,3 +23,49 @@ RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/lo
 RUN pear channel-discover pear.drush.org && pear install drush/drush
 
 RUN drush
+
+#ffmpeg
+RUN echo "deb http://www.deb-multimedia.org wheezy main non-free" >> /etc/apt/sources.list && \
+	echo "deb-src http://www.deb-multimedia.org wheezy main non-free" >> /etc/apt/sources.list && \
+	apt-get update && \
+	apt-get install -y --force-yes deb-multimedia-keyring && \
+	apt-get update && \
+	apt-get install \
+ 	 -y                  \
+	  libfaad-dev         \
+	  faad                \
+	  faac                \
+	  libfaac0            \
+	  libfaac-dev         \
+	  libmp3lame-dev      \
+	  x264                \
+	  libx264-dev         \
+	  libxvidcore-dev     \
+	  build-essential     \
+	  checkinstall  && \
+	apt-get build-dep -y ffmpeg && \
+	cd /tmp && \
+	apt-get source ffmpeg && \
+	cd /tmp/ffmpeg-* && \
+	./configure \
+	--enable-gpl \
+	--enable-nonfree \
+	--enable-libfaac \
+	--enable-libgsm \
+	--enable-libmp3lame \
+	--enable-libtheora \
+	--enable-libvorbis \
+	--enable-libx264 \
+	--enable-libxvid \
+	--enable-zlib \
+	--enable-postproc \
+	--enable-swscale \
+	--enable-pthreads \
+	--enable-x11grab \
+	--enable-libdc1394 \
+	--enable-version3 \
+	--enable-libopencore-amrnb \
+	--enable-libopencore-amrwb && \
+	mkdir -p /usr/local/share/ffmpeg  && \
+	checkinstall -D --install=no --pkgname=ffmpeg-full --autodoinst=yes -y && \
+	dpkg -i ffmpeg-full_*-1_amd64.deb
