--- a/deployment/roles/manager/templates/init_d_manager.conf
+++ b/deployment/roles/manager/templates/init_d_manager.conf
@@ -12,11 +12,11 @@
 
 # Change the next 3 lines to suit where you install your script and what you want to call it
 DIR=/home/manager/server-manager/
-DAEMON=$DIR/start.sh production
+DAEMON=$DIR/start.sh
 DAEMON_NAME=manager
 
 # Add any command line options for your daemon here
-DAEMON_OPTS=""
+DAEMON_OPTS="production"
 
 # This next line determines what user the script runs as.
 # Root generally not recommended but necessary if you are using the Raspberry Pi GPIO from Python.
