add websocket support

--- a/deployment/roles/manager/tasks/main.yml
+++ b/deployment/roles/manager/tasks/main.yml
@@ -32,3 +32,9 @@
 
 - name: set manager to run on boot
   shell: update-rc.d manager defaults
+
+- name: copy init.d config
+  action: template src=init_d_proxy.conf dest=/etc/init.d/manager-proxy mode=700
+
+- name: set manager to run on boot
+  shell: update-rc.d manager-proxy defaults
