--- a/deployment/roles/docker/tasks/docker.yml
+++ b/deployment/roles/docker/tasks/docker.yml
@@ -1,6 +1,6 @@
 ---
 - name: docker - add docker repository key
-  apt_key: url="https://get.docker.io/gpg"
+  apt_key: url="https://get.docker.com/gpg"
 
 - name: docker - add docker repository
   apt_repository: repo='deb http://get.docker.io/ubuntu docker main' update_cache=yes
