--- a/deployment/roles/manager/templates/init_d_proxy.conf
+++ b/deployment/roles/manager/templates/init_d_proxy.conf
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 ### BEGIN INIT INFO
-# Provides:          manager
+# Provides:          manager-proxy
 # Required-Start:    $remote_fs $syslog
 # Required-Stop:     $remote_fs $syslog
 # Default-Start:     2 3 4 5
@@ -12,11 +12,11 @@
 
 # Change the next 3 lines to suit where you install your script and what you want to call it
 DIR=/home/manager/server-manager/
-DAEMON=$DIR/start.sh
-DAEMON_NAME=manager
+DAEMON=$DIR/proxy.sh
+DAEMON_NAME=manager-proxy
 
 # Add any command line options for your daemon here
-DAEMON_OPTS="production"
+DAEMON_OPTS=""
 
 # This next line determines what user the script runs as.
 # Root generally not recommended but necessary if you are using the Raspberry Pi GPIO from Python.
