--- a/deployment/roles/manager/templates/init_d_manager.conf
+++ b/deployment/roles/manager/templates/init_d_manager.conf
@@ -12,11 +12,11 @@
 
 # Change the next 3 lines to suit where you install your script and what you want to call it
 DIR=/home/manager/server-manager/
-DAEMON=$DIR/start.sh
+DAEMON=./env/bin/uwsgi
 DAEMON_NAME=manager
 
 # Add any command line options for your daemon here
-DAEMON_OPTS="production"
+DAEMON_OPTS="--ini manager/uwsgi.ini"
 
 # This next line determines what user the script runs as.
 # Root generally not recommended but necessary if you are using the Raspberry Pi GPIO from Python.
@@ -29,7 +29,7 @@ PIDFILE=/var/run/$DAEMON_NAME.pid
 
 do_start () {
     log_daemon_msg "Starting system $DAEMON_NAME daemon"
-    start-stop-daemon --start --background --pidfile $PIDFILE --make-pidfile --user $DAEMON_USER --chuid $DAEMON_USER --startas $DAEMON -- $DAEMON_OPTS
+    start-stop-daemon -d /home/manager/server-manager --start --background --pidfile $PIDFILE --make-pidfile --user $DAEMON_USER --chuid $DAEMON_USER --startas $DAEMON -- $DAEMON_OPTS
     log_end_msg $?
 }
 do_stop () {
