--- a/deployment/roles/manager/templates/init_d_proxy.conf
+++ b/deployment/roles/manager/templates/init_d_proxy.conf
@@ -11,8 +11,8 @@
 ### END INIT INFO
 
 # Change the next 3 lines to suit where you install your script and what you want to call it
-DIR=/home/manager/server-manager/
-DAEMON=$DIR/proxy.sh
+DIR=/home/manager/server-manager/proxy/
+DAEMON=../bin/proxy
 DAEMON_NAME=manager-proxy
 
 # Add any command line options for your daemon here
