--- a/deployment/roles/manager/tasks/main.yml
+++ b/deployment/roles/manager/tasks/main.yml
@@ -38,3 +38,9 @@
 
 - name: set manager to run on boot
   shell: update-rc.d manager-proxy defaults
+
+- name: create log folder
+  file: path=/var/log/manager/ state=directory
+
+- name: create manager-shell log file
+  file: path=/var/log/manager/manager-shell.log state=touch
