set manager:manager as the owner of shell logs

--- a/deployment/roles/manager/tasks/main.yml
+++ b/deployment/roles/manager/tasks/main.yml
@@ -43,4 +43,4 @@
   file: path=/var/log/manager/ state=directory
 
 - name: create manager-shell log file
-  file: path=/var/log/manager/manager-shell.log state=touch
+  file: path=/var/log/manager/manager-shell.log state=touch owner=manager group=manager
