--- a/images/memcached/Dockerfile
+++ b/images/memcached/Dockerfile
@@ -1,31 +1,14 @@
-############################################################
-# Dockerfile to run Memcached Containers
-# Based on Ubuntu Image
-# Based on Digital Ocean Post 
-# https://www.digitalocean.com/community/articles/docker-explained-how-to-create-docker-containers-running-memcached
-############################################################
+FROM manager/debian7base
 
-# Set the base image to use to Ubuntu
-FROM ubuntu
-
-# Set the file maintainer (your name - the file's author)
-MAINTAINER Borja Burgos <borja@tutum.co>
-
-# Update the default application repository sources list
-RUN apt-get update
-
-# Install Memcached
 RUN apt-get install -y memcached
 
-# Port to expose (default: 11211)
 EXPOSE 11211
 
-# Default Memcached run command arguments
-# Change to limit memory when creating container in Tutum 
 CMD ["-m", "64"]
 
-# Set the user to run Memcached daemon
-USER daemon
+#user stuff
+RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 
-# Set the entrypoint to memcached binary
+USER #user#
+
 ENTRYPOINT memcached
