ffmpeg to base image

--- a/images/debian7base/Dockerfile
+++ b/images/debian7base/Dockerfile
@@ -1,7 +1,59 @@
 FROM debian:wheezy
 
-RUN apt-get update && apt-get install -y ssmtp  build-essential libncurses5-dev libncursesw5-dev libreadline6-dev libdb5.1-dev libgdbm-dev libsqlite3-dev libssl-dev libbz2-dev libexpat1-dev liblzma-dev zlib1g-dev wget ca-certificates git subversion mercurial git subversion mercurial strace tar wget curl gcc build-essential libmysqlclient-dev mysql-client screen nano joe vim unzip procps fontconfig libxrender1 xfonts-base xfonts-75dpi libpng12-dev libjpeg-dev openssh-server
+RUN apt-get update && apt-get install -y ssmtp  build-essential libncurses5-dev libncursesw5-dev libreadline6-dev libdb5.1-dev libgdbm-dev libsqlite3-dev libssl-dev libbz2-dev libexpat1-dev liblzma-dev zlib1g-dev wget ca-certificates git subversion mercurial git subversion mercurial strace tar wget curl gcc build-essential libmysqlclient-dev mysql-client screen nano joe vim unzip procps fontconfig libxrender1 xfonts-base xfonts-75dpi libpng12-dev libjpeg-dev openssh-server libopenjpeg-dev libtiff-dev libfreetype6-dev libwebp-dev telnet netcat
 
 RUN echo "Europe/Ljubljana" > /etc/timezone; dpkg-reconfigure -f noninteractive tzdata
 
 ADD ssmtp.conf /etc/ssmtp/ssmtp.conf
+
+#ffmpeg
+RUN echo "deb http://www.deb-multimedia.org wheezy main non-free" >> /etc/apt/sources.list && \
+	echo "deb-src http://www.deb-multimedia.org wheezy main non-free" >> /etc/apt/sources.list && \
+	apt-get update && \
+	apt-get install -y --force-yes deb-multimedia-keyring && \
+	apt-get update && \
+	apt-get install \
+ 	 -y                  \
+	  libfaad-dev         \
+	  faad                \
+	  faac                \
+	  libfaac0            \
+	  libfaac-dev         \
+	  libmp3lame-dev      \
+	  x264                \
+	  libx264-dev         \
+	  libxvidcore-dev     \
+	  build-essential     \
+	  checkinstall  && \
+	apt-get build-dep -y ffmpeg && \
+	cd /tmp && \
+	apt-get source ffmpeg && \
+	cd /tmp/ffmpeg-* && \
+	./configure \
+	--enable-gpl \
+	--enable-nonfree \
+	--enable-libfaac \
+	--enable-libgsm \
+	--enable-libmp3lame \
+	--enable-libtheora \
+	--enable-libvorbis \
+	--enable-libx264 \
+	--enable-libxvid \
+	--enable-zlib \
+	--enable-postproc \
+	--enable-swscale \
+	--enable-pthreads \
+	--enable-x11grab \
+	--enable-libdc1394 \
+	--enable-version3 \
+	--enable-libopencore-amrnb \
+	--enable-libopencore-amrwb && \
+	mkdir -p /usr/local/share/ffmpeg  && \
+	checkinstall -D --install=no --pkgname=ffmpeg-full --autodoinst=yes -y && \
+	dpkg -i ffmpeg-full_*-1_amd64.deb
+
+#wkhtmltox
+RUN apt-get install -y fontconfig libxrender1 xfonts-base xfonts-75dpi && \
+	cd /tmp && \
+	wget -O wkhtmltox.deb  http://downloads.sourceforge.net/project/wkhtmltopdf/0.12.2.1/wkhtmltox-0.12.2.1_linux-wheezy-amd64.deb && \
+	dpkg -i wkhtmltox.deb
