--- a/images/php56-hosting/php.ini
+++ b/images/php56-hosting/php.ini
@@ -1931,3 +1931,5 @@ opcache.fast_shutdown=1
 ; uprofiler runs.
 ;
 ;uprofiler.output_dir=/var/uprofiler
+
+extension=/usr/lib/php5/20131226/memcached.so
