igbinary - php images

--- a/images/php56-base-hosting/php.ini
+++ b/images/php56-base-hosting/php.ini
@@ -1933,3 +1933,4 @@ opcache.fast_shutdown=1
 ;uprofiler.output_dir=/var/uprofiler
 
 extension=/usr/lib/php5/20131226/memcached.so
+extension=/usr/lib/php5/20131226/igbinary.so
