--- a/deployment/roles/apache/tasks/main.yml
+++ b/deployment/roles/apache/tasks/main.yml
@@ -6,9 +6,15 @@
 
 - name: apache - add non-free wheezy repo
   apt_repository: repo='deb http://ftp.debian.org/debian/ wheezy non-free' update_cache=yes state=present
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
 
 - name: install apache2-mpm-event
   action: apt pkg=apache2-mpm-event default_release=wheezy-backports state=latest
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
+
+- name: install apache2-mpm-event
+  action: apt pkg=apache2-mpm-event default_release=jessie-backports state=latest
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
 
 - name: install apache2 fastcgi
   action: apt pkg=libapache2-mod-fastcgi state=latest
@@ -26,11 +32,25 @@
 
 - name: create envvars
   action: template src=envvars dest=/etc/apache2/envvars
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
+  notify:
+    - restart apache
+
+- name: (jessie) create envvars
+  action: template src=envvars_jessie dest=/etc/apache2/envvars
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
   notify:
     - restart apache
 
 - name: create apache2.conf
   action: template src=apache2.conf dest=/etc/apache2/apache2.conf
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
+  notify:
+    - restart apache
+
+- name: (jessie) create apache2.conf
+  action: template src=apache2_jessie.conf dest=/etc/apache2/apache2.conf
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
   notify:
     - restart apache
 
@@ -38,7 +58,7 @@
   action: file path=/etc/apache2/manager/ owner=apache group=apache state=directory mode=0770
 
 - name: apache | enable proxy
-  action: command a2enmod proxy_http rewrite fastcgi actions alias
+  action: command a2enmod proxy_http rewrite actions alias
   notify:
     - restart apache
 
