--- a/deployment/roles/mariadb/tasks/main.yml
+++ b/deployment/roles/mariadb/tasks/main.yml
@@ -8,6 +8,11 @@
 
 - name: Add MariaDB apt repository
   apt_repository: repo='deb http://ftp.osuosl.org/pub/mariadb/repo/10.1/debian wheezy main'
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
+
+- name: (jessie) Add MariaDB apt repository
+  apt_repository: repo='deb http://ftp.osuosl.org/pub/mariadb/repo/10.1/debian jessie main'
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
 
 - name: Install MariaDB
   apt: pkg=mariadb-server
