--- a/deployment/roles/docker/tasks/docker.yml
+++ b/deployment/roles/docker/tasks/docker.yml
@@ -1,9 +1,12 @@
 ---
+- name: docker - https apt transport
+  apt: pkg=apt-transport-https
+
 - name: docker - add docker repository key
   apt_key: url="https://get.docker.com/gpg"
 
 - name: docker - add docker repository
-  apt_repository: repo='deb http://get.docker.io/ubuntu docker main' update_cache=yes
+  apt_repository: repo='deb https://get.docker.io/ubuntu docker main' update_cache=yes
 
 - name: docker - install docker
   apt: pkg=lxc-docker
