--- a/deployment/roles/manager/tasks/main.yml
+++ b/deployment/roles/manager/tasks/main.yml
@@ -50,6 +50,12 @@
 - name: set manager to run on boot
   shell: update-rc.d manager-ssh-server defaults
 
+- name: copy init.d config
+  action: template src=init_d_cron.conf dest=/etc/init.d/manager-cron mode=700
+
+- name: set manager to run on boot
+  shell: update-rc.d manager-cron defaults
+
 - name: create log folder
   file: path=/var/log/manager/ state=directory owner=manager group=manager
 
