--- a/deployment/roles/docker/tasks/docker.yml
+++ b/deployment/roles/docker/tasks/docker.yml
@@ -1,9 +1,12 @@
 ---
 - name: docker - https apt transport
-  apt: pkg=apt-transport-https
+  apt: name={{item}} state=installed
+  with_items:
+    - apt-transport-https
+    - ca-certificates
 
 - name: docker - add docker repository key
-  apt_key: url="https://get.docker.com/gpg"
+  apt_key: data="{{ lookup('file', 'docker.pgp') }}" state=present
 
 - name: docker - add docker repository
   apt_repository: repo='deb https://get.docker.io/ubuntu docker main' update_cache=yes
