--- a/images/rabbitmq/Dockerfile
+++ b/images/rabbitmq/Dockerfile
@@ -10,7 +10,7 @@ RUN chown -R #user#:#user# /mystuff && chmod +x /mystuff/start.sh
 
 #install rabbitmq
 RUN \
-  wget -qO - https://www.rabbitmq.com/rabbitmq-release-signing-key-public.asc | apt-key add - && \
+  wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | apt-key add - && \
   echo "deb http://www.rabbitmq.com/debian/ testing main" > /etc/apt/sources.list.d/rabbitmq.list && \
   apt-get update && \
   DEBIAN_FRONTEND=noninteractive apt-get install -y rabbitmq-server && \
