--- a/images/mongo3.2/Dockerfile
+++ b/images/mongo3.2/Dockerfile
@@ -1,16 +1,16 @@
-FROM manager/mongo3.2
+FROM manager/mongo3.2-base
 
-#start script
-RUN mkdir /mystuff
-ADD start.sh /mystuff/start.sh
-
-#user stuff
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
+
+RUN mkdir /mystuff
+
+ADD start.sh /mystuff/start.sh
+ADD mongod.conf /etc/mongod.conf
+
 RUN chown -R #user#:#user# /mystuff && chmod +x /mystuff/start.sh
 
 USER #user#
 
-ADD redis.conf /mystuff/redis.conf
-
 EXPOSE 27017
+
 CMD [ "/mystuff/start.sh" ]
