--- a/images/mongo3.2/config.json
+++ b/images/mongo3.2/config.json
@@ -10,6 +10,10 @@
 		}
 	],
 	"variables": [
-	
+		{
+			"name": "mongod_config",
+			"description": "mongod settings",
+			"filename": "mongod.conf"
+		}
 	]
 }
