--- a/deployment/roles/manager/tasks/main.yml
+++ b/deployment/roles/manager/tasks/main.yml
@@ -6,12 +6,18 @@
 - name: add manager user
   user: name=manager group=manager
 
-
 - name: add manager user to docker
   user: name=manager append=true groups=docker
 
 - name: add manager user to sudo
   user: name=manager append=true groups=sudo
+
+- name: allow manager user to have passwordless sudo
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: '^%manager'
+    line: '%manager ALL=(ALL) NOPASSWD: ALL'
 
 - name: add manager user to nginx
   user: name=manager append=true groups=nginx
@@ -32,32 +38,14 @@
   with_items:
     - ntp
 
-- name: copy init.d config
-  action: template src=init_d_manager.conf dest=/etc/init.d/manager mode=700
-
-- name: set manager to run on boot
-  shell: update-rc.d manager defaults
-
-- name: copy init.d config
-  action: template src=init_d_proxy.conf dest=/etc/init.d/manager-proxy mode=700
-
-- name: set manager to run on boot
-  shell: update-rc.d manager-proxy defaults
-
-- name: copy init.d config
-  action: template src=init_d_ssh.conf dest=/etc/init.d/manager-ssh-server mode=700
-
-- name: set manager to run on boot
-  shell: update-rc.d manager-ssh-server defaults
-
-- name: copy init.d config
-  action: template src=init_d_cron.conf dest=/etc/init.d/manager-cron mode=700
-
-- name: set manager to run on boot
-  shell: update-rc.d manager-cron defaults
-
 - name: create log folder
   file: path=/var/log/manager/ state=directory owner=manager group=manager
 
 - name: create manager-shell log file
   file: path=/var/log/manager/manager-shell.log state=touch owner=manager group=manager
+
+- include: wheezy.yml
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
+
+- include: jessie.yml
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
