--- a/deployment/deploy.yml
+++ b/deployment/deploy.yml
@@ -4,9 +4,10 @@
   sudo: True
 
   roles:
-    - docker
-    - mariadb
-    - nginx
-    - apache
-    - go1.4
-    - manager
+    - { role: docker, tags: ["docker"] }
+    - { role: mariadb, tags: ["mariadb", "mysql"] }
+    - { role: postgres, tags: ["postgres"] }
+    - { role: nginx, tags: ["nginx"] }
+    - { role: apache, tags: ["apache"] }
+    - { role: go1.4, tags: ["go1.4"] }
+    - { role: manager, tags: ["manager"] }
