--- a/deployment/roles/postgres/tasks/main.yml
+++ b/deployment/roles/postgres/tasks/main.yml
@@ -36,14 +36,11 @@
       - python-psycopg2
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
 
-- name: Ensure the PostgreSQL service is running 
-  service: name=postgresql 
-           state=started 
+- name: Ensure the PostgreSQL service is running
+  service: name=postgresql
+           state=started
            enabled=yes
 
-#- name: ensure superuser is created
-#  sudo_user: postgres
-#  postgresql_user: name=postgres
-#                   password={{ postgres_root_password }}
-#                   role_attr_flags=SUPERUSER,CREATEDB,INHERIT,LOGIN,REPLICATION
-#                   state=present
+- name: Ensure postgres user is created and has a password
+  user:
+    name=postgres password={{ postgres_user_password | password_hash('sha512') }} state=present
