--- a/deployment/roles/postgres/tasks/main.yml
+++ b/deployment/roles/postgres/tasks/main.yml
@@ -23,7 +23,7 @@
 - name: ensure packages are installed (wheezy)
   apt: name={{item}} default_release=wheezy-pgdg state=latest
   with_items:
-      - postgresql
+      - postgresql-9.5
       - libpq-dev
       - python-psycopg2
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '7'
@@ -31,7 +31,7 @@
 - name: ensure packages are installed (jessie)
   apt: name={{item}} default_release=jessie-pgdg state=latest
   with_items:
-      - postgresql
+      - postgresql-9.5
       - libpq-dev
       - python-psycopg2
   when: ansible_distribution == 'Debian' and ansible_distribution_major_version == '8'
@@ -47,3 +47,9 @@
 - name: ensure manager has a role that can create databases
   postgresql_user: name=postgres password={{ postgres_user_password }} role_attr_flags=SUPERUSER,CREATEDB state=present
   become_user: postgres
+
+- name: change listen_addresses to '*'
+  lineinfile: dest=/etc/postgresql/9.5/main/postgresql.conf regexp="^#listen_addresses" line="listen_addresses = '*'" state=present backup=yes
+  sudo: True
+  notify:
+    - restart postgresql
