Add mysql/postgres root passwords to config and parse them in main.go

--- a/config-example.json
+++ b/config-example.json
@@ -1,3 +1,5 @@
 {
-	"server_name": "NONAME"
+	"server_name": "NONAME",
+	"mysql_root_password": "password",
+	"postgres_root_password": "password"
 }
