--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "go-libs/src/github.com/go-sql-driver/mysql"]
 	path = go-libs/src/github.com/go-sql-driver/mysql
 	url = https://github.com/go-sql-driver/mysql
+[submodule "go-libs/src/github.com/lib/pq"]
+	path = go-libs/src/github.com/lib/pq
+	url = https://github.com/lib/pq
