--- a/deployment/roles/postgres/tasks/main.yml
+++ b/deployment/roles/postgres/tasks/main.yml
@@ -46,6 +46,7 @@
 
 - name: ensure manager has a role that can create databases
   postgresql_user: name=postgres password={{ postgres_user_password }} role_attr_flags=SUPERUSER,CREATEDB state=present
+  become: yes
   become_user: postgres
 
 - name: change listen_addresses to '*'
