--- a/images/php56-extreme-hosting/Dockerfile
+++ b/images/php56-extreme-hosting/Dockerfile
@@ -1,4 +1,4 @@
-FROM manager/php56-base-hosting
+FROM deanrock/server-manager:php56-base-hosting
 
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 
