--- a/images/php56-shell/Dockerfile
+++ b/images/php56-shell/Dockerfile
@@ -1,4 +1,4 @@
-FROM manager/php56-base-shell
+FROM deanrock/server-manager:php56-base-shell
 
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 
