--- a/images/php7-base/Dockerfile
+++ b/images/php7-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM manager/debian8base
+FROM deanrock/server-manager:debian8base
 
 RUN echo "deb http://repos.zend.com/zend-server/early-access/php7/repos ubuntu/" >> /etc/apt/sources.list && \
   apt-get update && \
