--- a/images/python34-uwsgi-hosting/Dockerfile
+++ b/images/python34-uwsgi-hosting/Dockerfile
@@ -1,4 +1,4 @@
-FROM manager/debian7base
+FROM deanrock/server-manager:debian7base
 
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 
