add base images

--- a/images/hhvm-hosting/Dockerfile
+++ b/images/hhvm-hosting/Dockerfile
@@ -1,7 +1,4 @@
-FROM deanrock/server-manager:debian7base
-
-RUN echo deb http://dl.hhvm.com/debian wheezy main | tee /etc/apt/sources.list.d/hhvm.list && \
-	apt-get update && apt-get install -y --force-yes hhvm
+FROM deanrock/server-manager:hhvm-base
 
 EXPOSE 9000
 
