--- a/images/rabbitmq/Dockerfile
+++ b/images/rabbitmq/Dockerfile
@@ -1,4 +1,4 @@
-FROM deanrock/server-manager:debian8base
+FROM deanrock/server-manager:rabbitmq-base
 
 #start script
 RUN mkdir /mystuff
@@ -7,16 +7,6 @@ ADD start.sh /mystuff/start.sh
 #user stuff
 RUN echo "#user#:x:#uid#:" >> /etc/group && echo "#user#:x:#uid#:#uid#:,,,:/home/#user#:/bin/bash" >> /etc/passwd
 RUN chown -R #user#:#user# /mystuff && chmod +x /mystuff/start.sh
-
-#install rabbitmq
-RUN \
-  wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | apt-key add - && \
-  echo "deb http://www.rabbitmq.com/debian/ testing main" > /etc/apt/sources.list.d/rabbitmq.list && \
-  apt-get update && \
-  DEBIAN_FRONTEND=noninteractive apt-get install -y rabbitmq-server && \
-  rm -rf /var/lib/apt/lists/* && \
-  rabbitmq-plugins enable rabbitmq_management && \
-  echo "[{rabbit, [{loopback_users, []}]}]." > /etc/rabbitmq/rabbitmq.config
 
 USER #user#
 
