--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: go
 go:
 - 1.7
-script: make build
+script:
+    - cd .ci/
+    - docker build -t image -f Dockerfile .
+    - cd ../
+    - docker run -it -v `pwd`:/code image /code/build.sh
 deploy:
   provider: releases
   api_key:
