--- a/deployment/roles/go1.4/tasks/main.yml
+++ b/deployment/roles/go1.4/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: install build essential
+  action: apt pkg={{item}} state=installed
+  with_items:
+    - build-essential
+    - gcc
+    
 - name: mkdir go1.4
   file: path=/usr/local/go1.4 state=directory
 
