add deployment steps to ansible playbook, add create-admin-user command

--- a/deployment/development.yml
+++ b/deployment/development.yml
@@ -11,3 +11,4 @@
     - { role: apache, tags: ["apache"] }
     - { role: go1.4, tags: ["go1.4"] }
     - { role: manager, tags: ["manager"] }
+    - { role: development, tags: ["development"] }
